fixed the wrapping around the aside on page 2

--- a/secondpage.css
+++ b/secondpage.css
@@ -58,16 +58,15 @@ a:visited {
 }
 
 .paragraph1 {
-    padding: 20px;
+    padding: 0 20px 0 20px;
 }
 
 .aside1 {
     display: inline;
     float: left;
     width: 15%;
-    padding-left: 15px;
-    margin-left: 15px;
+    margin: 10px 15px 0 10px;
     font-style: italic;
-    text-align: left;
+    text-align: center;
     background-color: lightgray;
 }
